login spacing issue sorted

--- a/main/src/app/pages/authentication/side-login/side-login.component.css
+++ b/main/src/app/pages/authentication/side-login/side-login.component.css
@@ -50,6 +50,29 @@ input {
   font-size: 14px;
 }
 
+.input-container.password-container {
+  position: relative;
+}
+
+.input-container.password-container input {
+  padding-right: 40px;
+  /* Add padding to make space for the button */
+}
+
+.input-container.password-container button {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.input-container.password-container button mat-icon {
+  font-size: 20px;
+}
 
 input.is-invalid {
   border-color: red;
@@ -90,6 +113,11 @@ button[type="button"] {
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
+  padding: 0;
+}
+
+button[type="button"] mat-icon {
+  font-size: 20px;
 }
 
 /* Register Link */
@@ -126,7 +154,30 @@ button[type="button"] {
   color: red !important;
 }
 
-form[_ngcontent-ng-c2617672373] div[_ngcontent-ng-c2617672373] {
+form[_ngcontent-ng-c1927182847] div[_ngcontent-ng-c1927182847] {
   text-align: left;
   margin-bottom: 5px;
+}
+
+.input-container.password-container[_ngcontent-ng-c1927182847] button[_ngcontent-ng-c1927182847] {
+  position: absolute;
+  height: 15px;
+  width: 20px;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+button[type="button"][_ngcontent-ng-c1927182847] {
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  color: black;
+  transform: translateY(-50%);
+  padding: 0;
 }
